tests/test_assets/semantic/invalid/mutation/enum_member_targets.cog
Color :: enum {
    Red,
    Blue,
}

test::() -> void {
    Color.Red = Color.Blue;
    Color.Red += 1;
    Color.Red++;
}