tests/test_assets/semantic/invalid/mutation/enum_member_targets.expected
semantic error at line 7: assignment target is not assignable
semantic error at line 8: compound assignment target is not assignable
semantic error at line 9: increment/decrement target is not assignable
3 semantic errors generated.
